Add filtered view functionality

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
             <nav>
                 <h1>Todo It</h1>
                 <div class="nav-btns">
-                    <button id="tasks">Tasks</button>
+                    <button id="tasks" class="clicked">Tasks</button>
                     <button id="completed">Completed</button>
                     <div class="dropdown-wrapper">
                         <button id="projects">
