--- a/src/template.html
+++ b/src/template.html
@@ -36,6 +36,7 @@
                     </div>
                 </div>
             </nav>
+
             <div class="main">
                 <div class="header">
                     <h1>Your Tasks</h1>
@@ -43,78 +44,81 @@
                 </div>
 
                 <div class="cards-container">
-
                 </div>
-
-            <dialog id="add-task">
-                <div class="add-task-header">
-                    <h2>Add Task</h2>
-                    <button id="exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
-                </div>
-                <form id="add-task-form">
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" placeholder="Groceries">
-                    
-                    <label for="subtasks">Subtasks</label>
-                    <input type="text" id="subtasks" name="subtasks" placeholder="Milk, Eggs, Bread, ...">
-
-                    <label for="due-date">Due Date</label>
-                    <input type="date" id="due-date" name="due-date" required>
-
-                    <label for="task-priority">Priority</label>
-                    <input type="number" id="task-priority" name="priority" min="1" max="3" required>
-
-                    <label for="project">Project</label>
-                    <select name="project" id="project">
-                        <option value="personal">Personal</option>
-                        <option value="work">Work</option>
-                    </select>
-                    <button type="submit">Create Task</button>
-                </form>
-            </dialog>
-
-            <dialog id="add-project">
-                <div class="add-project-header">
-                    <h2>Add Project</h2>
-                    <button id="project-exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
-                </div>
-                <form id="add-project-form">
-                    <label for="project-name">Project Name</label>
-                    <input type="text" id="project-name" name="project-name">
-                    <button type="submit">Create Project</button>
-                </form>
-            </dialog>
-
-            <dialog id="edit-task">
-                <div class="edit-task-header">
-                    <h2>Edit Task</h2>
-                    <button id="edit-exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
-                </div>
-                <form id="edit-task-form">
-                    <label for="edit-title">Edit Title</label>
-                    <input type="text" id="edit-title" name="edit-title">
-
-                    <label for="add-subtask">Add Subtask</label>
-                    <input type="text" name="add-subtask" id="add-subtask">
-
-                    <label for="remove-subtask">Remove Subtask</label>
-                    <input type="text" name="remove-subtask" id="remove-subtask">
-
-                    <label for="edit-due-date">Due Date</label>
-                    <input type="date" id="edit-due-date" name="edit-due-date">
-
-                    <label for="edit-priority">Edit Priority</label>
-                    <input type="number" name="edit-priority" id="edit-priority" min="1" max="3">
-
-                    <label for="edit-project">Project</label>
-                    <select name="edit-project" id="edit-project">
-                        <option value="" disabled selected>Select an option</option>
-                        <option value="personal">Personal</option>
-                        <option value="work">Work</option>
-                    </select>
-                    <button type="submit">Submit Changes</button>
-                </form>
-            </dialog>
+            </div>
         </div>
+
+        <dialog id="add-task">
+            <div class="add-task-header">
+                <h2>Add Task</h2>
+                <button id="exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
+            </div>
+            <form id="add-task-form">
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" placeholder="Groceries">
+                
+                <label for="subtasks">Subtasks</label>
+                <input type="text" id="subtasks" name="subtasks" placeholder="Milk, Eggs, Bread, ...">
+
+                <label for="due-date">Due Date</label>
+                <input type="date" id="due-date" name="due-date" required>
+
+                <label for="task-priority">Priority</label>
+                <input type="number" id="task-priority" name="priority" min="1" max="3" required>
+
+                <label for="project">Project</label>
+                <select name="project" id="project">
+                    <option value="personal">Personal</option>
+                    <option value="work">Work</option>
+                </select>
+                <button type="submit">Create Task</button>
+            </form>
+        </dialog>
+
+        <dialog id="add-project">
+            <div class="add-project-header">
+                <h2>Add Project</h2>
+                <button id="project-exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
+            </div>
+            <form id="add-project-form">
+                <label for="project-name">Project Name</label>
+                <input type="text" id="project-name" name="project-name">
+                <button type="submit">Create Project</button>
+            </form>
+        </dialog>
+
+        <dialog id="edit-task">
+            <div class="edit-task-header">
+                <h2>Edit Task</h2>
+                <button id="edit-exit"><img src="./img/Exit Icon.png" alt="exit icon"></button>
+            </div>
+            <form id="edit-task-form">
+                <label for="edit-title">Edit Title</label>
+                <input type="text" id="edit-title" name="edit-title">
+
+                <label for="add-subtask">Add Subtask</label>
+                <input type="text" name="add-subtask" id="add-subtask">
+
+                <label for="remove-subtask">Remove Subtask</label>
+                <input type="text" name="remove-subtask" id="remove-subtask">
+
+                <label for="edit-due-date">Due Date</label>
+                <input type="date" id="edit-due-date" name="edit-due-date">
+
+                <label for="edit-priority">Edit Priority</label>
+                <input type="number" name="edit-priority" id="edit-priority" min="1" max="3">
+
+                <label for="edit-project">Project</label>
+                <select name="edit-project" id="edit-project">
+                    <option value="" disabled selected>Select an option</option>
+                    <option value="personal">Personal</option>
+                    <option value="work">Work</option>
+                </select>
+                <div class="edit-btns">
+                    <button type="submit">Submit Changes</button>
+                    <button id="delete">Delete</button>
+                </div>
+            </form>
+        </dialog>
     </body>
 </html>
