Refactor toast function

--- a/src/template.html
+++ b/src/template.html
@@ -55,7 +55,7 @@
             </div>
             <form id="add-task-form">
                 <label for="title">Title</label>
-                <input type="text" id="title" name="title" placeholder="Groceries">
+                <input type="text" id="title" name="title" placeholder="Groceries" required>
                 
                 <label for="subtasks">Subtasks</label>
                 <input type="text" id="subtasks" name="subtasks" placeholder="Milk, Eggs, Bread, ...">
